prep cloud architecture

--- a/src/tedeeClient.Core/tedeeClient.Core.csproj
+++ b/src/tedeeClient.Core/tedeeClient.Core.csproj
@@ -18,4 +18,11 @@
     <PackageReference Include="System.Text.Json" Version="8.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Api\ApiTokenProvider\" />
+    <Folder Include="Api\Local\" />
+    <Folder Include="Api\UrlBuilder\" />
+    <Folder Include="Converters\" />
+  </ItemGroup>
+
 </Project>
